--- a/index.html
+++ b/index.html
@@ -1443,7 +1443,7 @@
                 <div class="contact-card">
                     <div class="contact-icon">📍</div>
                     <h3>Location</h3>
-                    <p style="color: rgba(255, 255, 255, 0.8); position: relative; z-index: 1;">Chandigarh University<br>Mohali, Punjab</p>
+                    <p style="color: rgba(255, 255, 255, 0.8); position: relative; z-index: 1;">Forbesganj<br>Bihar, India</p>
                 </div>
             </div>
         </div>
