--- a/index.html
+++ b/index.html
@@ -1224,7 +1224,7 @@
                         Hi, I'm<br>
                         <span class="glitch" data-text="RAVI ANAND">RAVI ANAND</span>
                     </h1>
-                    <p>Software Developer | Full Stack Engineer | Tech Innovator</p>
+                    <p>Application Developer | Full Stack Engineer | Tech Innovator</p>
                     <div class="cta-buttons">
                         <a href="#contact" class="btn btn-primary">Let's Connect</a>
                         <a href="#projects" class="btn btn-secondary">View Work</a>
@@ -1251,34 +1251,37 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3>Software Developer</h3>
-                        <div class="company">JAGUAR LANDROVER</div>
-                        <div class="date">August 2022 - Present</div>
+                        <h3>TATA TECHNOLOGIES</h3>
+                        <div class="company">Application Developer</div>
+                        <div class="date">August 2022 - November 2023</div>
                         <ul>
-                            <li>Collaborated with Jaguar Land Rover team on the Cimplicity Platform</li>
-                            <li>Developed advanced features for upcoming vehicle models</li>
-                            <li>Worked across manufacturing plants in Nitra, Halewood, and Solihul</li>
+                            <li>Worked with Jaguar Land Rover (JLR) engineering teams on the CIMPLICITY-based manufacturing monitoring platform.</li>
+                            <li>Contributed to development and enhancement of application features supporting vehicle manufacturing and plant operations.</li>
+                            <li>Supported digitalization of manufacturing processes across JLR plants in Nitra, Halewood, and Solihull.</li>
+                            <li>Collaborated with cross-functional teams to analyze requirements, implement changes, and resolve application issues.</li>
+                            <li>Followed enterprise coding standards, SDLC, and Agile practices in a production-like environment.</li>
+                            <li>Improved system stability and usability through bug fixes, configuration updates, and performance tuning.</li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3>Full Stack Developer</h3>
-                        <div class="company">COGNIZANT</div>
+                        <h3>COGNIZANT</h3>
+                        <div class="company">Program Analyst Trainee</div>
                         <div class="date">February 2022 - July 2022</div>
                         <ul>
-                            <li>Designed user-friendly websites with 25% increase in user engagement</li>
-                            <li>Ensured 100% operational microservices deployment on AWS</li>
-                            <li>Implemented scalable cloud solutions</li>
+                            <li>Trained in end-to-end full-stack development end-to-end full-stack development, covering frontend, backend, and database fundamentals.</li>
+                            <li>Implemented basic CRUD functionalities and practiced writing clean, modular code during guided exercises.</li>
+                            <li>Collaborated with peers and mentors to analyze requirements and troubleshoot issues in training projects.</li>
                         </ul>
                     </div>
                 </div>
 
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h3>Software Engineer Intern</h3>
-                        <div class="company">HIGHRADIUS</div>
+                        <h3>HIGHRADIUS</h3>
+                        <div class="company">Software Engineer Intern</div>
                         <div class="date">June 2021 - July 2021</div>
                         <ul>
                             <li>Created ML model for B2B payment date predictions</li>
@@ -1316,6 +1319,7 @@
                         <div class="skill-tag"><span>VS Code</span></div>
                         <div class="skill-tag"><span>Xcode</span></div>
                         <div class="skill-tag"><span>Jupyter</span></div>
+                        <div class="skill-tag"><span>SpringBoot</span></div>
                     </div>
                 </div>
 
@@ -1348,8 +1352,12 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-header">
-                        <h3>COVID-19 Info Platform</h3>
-                        <p>Comprehensive platform with real-time data on symptoms, prevention, statistics, news, treatments, and emergency contacts.</p>
+                        <h3>COVID-19 Information & Resource Aggregation Platform</h3>
+                        <p>
+                            <li>Built a web platform to aggregate verified COVID-19 information including symptoms, prevention, vaccination, and case updates.</li>
+                            <li>Implemented backend logic to fetch and consolidate data from multiple public sources for real-time awareness.</li>
+                            <li>Designed the system with focus on data reliability, modularity, and public-health usability.</li>
+                        </p>
                         <div class="tech-stack">
                             <span class="tech-tag">JavaScript</span>
                             <span class="tech-tag">NodeJS</span>
@@ -1363,7 +1371,11 @@
                 <div class="project-card">
                     <div class="project-header">
                         <h3>Realtime Whiteboard</h3>
-                        <p>Interactive collaborative whiteboard with Canvas APIs and Socket.io for real-time synchronization across multiple users.</p>
+                        <p>
+                            <li>Developed a web-based whiteboard enabling real-time drawing and collaboration across multiple users.</li>
+                            <li>Implemented live synchronization of canvas actions using event-driven communication.</li>
+                            <li>• Added undo/redo functionality to enhance user control and interaction experience.</li>
+                        </p>
                         <div class="tech-stack">
                             <span class="tech-tag">HTML/CSS</span>
                             <span class="tech-tag">JavaScript</span>
@@ -1375,8 +1387,12 @@
 
                 <div class="project-card">
                     <div class="project-header">
-                        <h3>Ticket Management App</h3>
-                        <p>Efficient system with color-based priority filtering, task completion tracking, and persistent data storage.</p>
+                        <h3>Ticket Management System</h3>
+                        <p>
+                            <li>Developed a client-side application to create, manage, and filter tickets using color-coded priority levels.</li>
+                            <li>Implemented features like ticket locking, status tracking, and search by unique ticket ID.</li>
+                            <li>Persisted user data using browser local storage to maintain state across sessions.</li>
+                        </p>
                         <div class="tech-stack">
                             <span class="tech-tag">HTML/CSS</span>
                             <span class="tech-tag">JavaScript</span>
@@ -1402,7 +1418,7 @@
                     </div>
                 </div>
 
-                <div class="education-card">
+                <!-- <div class="education-card">
                     <h3>B.D.B.K.S College</h3>
                     <div class="degree">Class 12 | BSEB</div>
                     <div class="edu-details">
@@ -1419,7 +1435,7 @@
                         <span class="score">CGPA: 9.6</span>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -1443,7 +1459,7 @@
                 <div class="contact-card">
                     <div class="contact-icon">📍</div>
                     <h3>Location</h3>
-                    <p style="color: rgba(255, 255, 255, 0.8); position: relative; z-index: 1;">Forbesganj<br>Bihar, India</p>
+                    <p style="color: rgba(255, 255, 255, 0.8); position: relative; z-index: 1;">FORBESGANJ<br>BIHAR</p>
                 </div>
             </div>
         </div>
